posiGen_FullsendBox/src/objects/TmpUploadQSSOItem__c.object
<CustomObject>
    <fields>
        <fullName>CustomerName__c</fullName>
        <label>CustomerName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ItemDescription__c</fullName>
        <label>ItemDescription</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ItemNumber__c</fullName>
        <label>ItemNumber</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processed_On__c</fullName>
        <label>Processed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Qty__c</fullName>
        <label>Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SONumber__c</fullName>
        <label>SONumber</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serial__c</fullName>
        <label>Serial</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>TmpUploadQSSOItem</label>
    <listViews>
        <fullName>All</fullName>
        <columns>SONumber__c</columns>
        <columns>CustomerName__c</columns>
        <columns>ItemNumber__c</columns>
        <columns>ItemDescription__c</columns>
        <columns>Serial__c</columns>
        <columns>Qty__c</columns>
        <columns>Date__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SONumber__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>TmpUploadQSSOItem Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TmpUploadQSSOItems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>